...
      centerTitle: false,

      title: Column(
        crossAxisAlignment: CrossAxisAlignment.start,
        children: [
          Text(
            "Log Entry",
            style: t.text.heading2,
          ),
          Text(
            "Add a new substance record",
            style: t.text.bodySmall.copyWith(
              color: t.colors.textSecondary,
...
